# rustgrad

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
src/: dimensions.rs  engine.rs  lib.rs  matmul.rs  nam.rs  nn.rs  ops.rs  optimiser.rs  ref_tensor.rs  shape.rs  shaped_tensor.rs  tensor.rs
src/data/: dataset.rs  labeled_dataset.rs  loader.rs  mod.rs
src/experiments/: mod.rs
src/experiments/cnn/: cnn.rs
src/experiments/housing/: data.rs  mod.rs  nam_experiment.rs  training.rs  visualization.rs
src/experiments/iris/: data.rs  iris_experiment.rs  mod.rs  training.rs  visualization.rs
src/experiments/optimization/: README.md  adam_benchmark.rs  mod.rs  pytorch_benchmark.py
src/experiments/ts_mixer/: layers.rs  mod.rs  time_batch_norm.rs  ts_mixer.rs
src/nn/: batchnorm_1d.rs  conv1d.rs  linear.rs  mlp.rs  mod.rs
src/nn/ts_mixer/: layers.rs  time_batch_norm.rs  ts_mixer.rs
src/ops/: add.rs  broadcast.rs  div.rs  dropout.rs  exp.rs  log.rs  matmul.rs  max.rs  mean.rs  mod.rs  mul.rs  negate.rs  permute.rs  relu.rs  reshape.rs  slicing.rs  softmax.rs  sqrt.rs  stack.rs  substract.rs  sum.rs  update_value.rs  var.rs
src/ops/scalar/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
src/optim/: adam.rs  mod.rs  optimizer.rs  sgd.rs
