[package]
name = "rustgrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
ndarray-rand = "0.15.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"
csv = "1.3.0"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }