[package]
name = "rustgrad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
ndarray = "0.16.1"
num-traits = "0.2.19"
ndarray-rand = "0.15.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"
csv = "1.3.0"
plotters = { version = "0.3.7", features = ["ab_glyph", "fontconfig-dlopen"] }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10.0"
tensorboard-rs = "0.5.9"

[[bin]]
name = "housing_nam"
path = "src/bin/housing_nam.rs"

[[bin]]
name = "iris_classifier"
path = "src/bin/iris_classifier.rs"

[[bin]]
name = "adam_benchmark"
path = "src/bin/adam_benchmark.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
overflow-checks = true
panic = "unwind"



